<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout22"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/edt_browse_search"
            android:layout_width="0dp"
            android:layout_height="@dimen/home_bar_vertical_search_size"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:background="@color/searchBackground"
            android:drawableStart="@drawable/ic_home_bar_search"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/home_bar_edittext_search"
            android:inputType="textPersonName"
            android:paddingStart="5dp"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/ibtn_browse_search"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TouchTargetSizeCheck" />

        <ImageButton
            android:id="@+id/ibtn_browse_search"
            android:layout_width="@dimen/home_bar_horizontal_icon_size"
            android:layout_height="@dimen/home_bar_vertical_icon_size"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="10dp"
            android:background="@android:color/transparent"
            android:scaleType="fitXY"
            android:src="@drawable/ic_home_bar_scrap"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/ibtn_browse_cart"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

        <ImageButton
            android:id="@+id/ibtn_browse_cart"
            android:layout_width="@dimen/home_bar_horizontal_icon_size"
            android:layout_height="@dimen/home_bar_vertical_icon_size"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="10dp"
            android:background="@android:color/transparent"
            android:scaleType="fitXY"
            android:src="@drawable/ic_home_bar_shoppingbasket"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="0dp"
        android:layout_height="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout22"
        app:tabIndicatorColor="@color/skyblue"
        app:tabIndicatorHeight="2dp"
        app:tabMode="scrollable"
        app:tabSelectedTextColor="@color/skyblue"
        app:tabTextColor="@color/black">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabItem_browse_following"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/browse_following" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabItem_browse_picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/browse_picture" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabItem_browse_houses"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/browse_houses" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabItem_browse_knowhow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/browse_knowhow" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabItem_browse_expertHouses"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/browse_experthouses" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabItem_browse_qna"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/browse_qna" />
    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/vp2_browse_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>



